--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adobe/aem-boilerplate",
+  "name": "zine-portfolio",
   "private": true,
   "version": "1.3.0",
   "description": "Starter project for Adobe Helix",
